--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,1 @@
-*.zip filter=lfs diff=lfs merge=lfs -text
-saved_model/* filter=lfs diff=lfs merge=lfs -text
+saved_model/** filter=lfs diff=lfs merge=lfs -text
